--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <img src="dg8.gif" name="se2">
 <img src="dgam.gif" name="ampm">
 </h1> 
-<script src="myscript.js" >
+<script src="js/myscript.js" >
 
 
 </script>
