--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 
   <body>
 <h1>
-<img src="dg8.gif" name="hr1">
-<img src="dg6.gif" name="hr2">
-<img src="dgc.gif">
-<img src="dg8.gif" name="mn1">
-<img src="dg8.gif" name="mn2">
-<img src="dgc.gif">
-<img src="dg8.gif" name="se1">
-<img src="dg8.gif" name="se2">
-<img src="dgam.gif" name="ampm">
+<img src="img/dg8.gif" name="hr1">
+<img src="img/dg6.gif" name="hr2">
+<img src="img/dgc.gif">
+<img src="img/dg8.gif" name="mn1">
+<img src="img/dg8.gif" name="mn2">
+<img src="img/dgc.gif">
+<img src="img/dg8.gif" name="se1">
+<img src="img/dg8.gif" name="se2">
+<img src="img/dgam.gif" name="ampm">
 </h1> 
-<script src="js/myscript.js" >
+<script src="myscript.js" >
 
 
 </script>
@@ -30,6 +30,6 @@
         <input type="search" tabindex="1" name ="q" placeholder="Search..."/>
         </form>
     </div>
-</body>    
+</body>
   </body>
 </html>
